tests/fail/implicit_deref_err.tk
import std/fs
import std/string::{string}

fn expect_view(path: str) {
}

fn main() -> i32 {
    auto path = string::from("test.txt")
    // string directly passed to str, should fail in type check (No implicit Auto-Deref!)
    expect_view(path)
    return 0
}
